HelloUltraviolet/Fixtures/RejectedSource/Comptime/ComptimePointerParameter/Source/Main.uv
//! Rejected compile-time specimen for a pointer-bearing compile-time parameter.

comptime procedure inspectPointer(pointer: Ptr<i32>) -> i32 {
    return 0
}

public procedure comptimePointerParameterReference() -> i32 {
    return 0
}
